fix: ensure Aurora background visibility with dark bg and normalized noise

--- a/app/assets/scss/_base.scss
+++ b/app/assets/scss/_base.scss
@@ -11,7 +11,7 @@ html, body {
   font-family: $font-family;
   font-size: 16px;
   color: $grey-darken-4;
-  background-color: $bg-app;
+  background-color: #0d1117; // Dark background for Aurora to show
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
