--- a/app/assets/scss/main.scss
+++ b/app/assets/scss/main.scss
@@ -11,7 +11,7 @@
   display: flex;
   min-height: 100vh;
   font-family: $font-family;
-  background: $bg-app;
+  background: transparent;
 
   >div {
     width: 100%;
